# tradeevidence-web

./: AGENTS.md  CHANGELOG.md  COPILOT-MERGE-PROMPT.md  PACKAGE-MANIFEST.md  README-PACKAGE.md  README.md  docs - Shortcut.lnk  git-commands.txt  package-lock.json  package.json  update_docs_links.py
analytics-engine/: .gitignore  README.md  pyproject.toml  run_data_agent.py
analytics-engine/docs/: BASELINE_AUDIT.md  LEGACY_RULES_BASELINE.md
analytics-engine/src/tradeevidence_analytics/: stellar_data_engine.py  stellar_data_reporter.py  stellar_strategy.py
analytics-engine/tests/: test_engine_baseline.py
app/: page.tsx
docs/: 00-PRD.md  01-Product-Vision.md  01a-Product-Philosophy.md  01b-User-Personas.md  02-Principles.md  03-Architecture.md  04-Design-System.md  05-Product-Decisions.md  06-Roadmap.md  07-Decision-Workspace-Concept.md  07-Scoring-Engine.md  08-AI-Strategy.md  09-Data-Model.md  10-Glossary.md  11-TradeEvidence-Manifesto.md  12-Engineering-Standards.md  13-Competitive-Analysis.md  AI_CONTEXT.md  Canonical-Terminology.md  Documentation-Governance.md  Documentation-Status.md  Evidence-History-and-Validation.md  Evidence-Snapshot-Data-Contract.md  MVP-v1.md  Product-Decision-Log.md  README.md  Source-of-Truth.md  System-Map.md  Trading-Profile.md  User-Journey.md
docs/architecture/: APIs.md  Authentication.md  Backend.md  Database.md  Deployment.md  Frontend.md
docs/book/: TradeEvidence_Engineering_Book_v1.0.docx
docs/decisions/: ADR-0001.md  ADR-0002.md  ADR-0003.md
docs/engineering/: AI-DLC-Phase-Gates.md  Canonical-Analytical-Model.md  (+5 more)
(+43 files in other folders)
