[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeevidence-analytics"
version = "0.1.0"
description = "Deterministic Phase 1 analytical-engine baseline for TradeEvidence"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
